--- a/src/components/Store.module.css
+++ b/src/components/Store.module.css
@@ -1,8 +1,29 @@
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    min-height: 100vh;
-    padding: 40px 200px;
+    margin-top: 150px;
+    padding: 0 150px;
 }
+
+@media (max-width: 1200px) {
+    .container {
+        padding: 0 80px;
+        margin-top: 120px;
+    }
+}
+
+@media (max-width: 770px) {
+    .container {
+        padding: 0 40px;
+    }
+}
+
+@media (max-width: 555px) {
+    .container {
+        justify-content: center;
+        padding: 0 10px;
+    }
+}
+
