--- a/src/components/Store.module.css
+++ b/src/components/Store.module.css
@@ -7,6 +7,24 @@
     padding: 0 150px;
 }
 
+.loading {
+    border: 3px solid silver;
+    border-top-color: rgb(67, 164, 255);
+    border-radius: 50%;
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    width: 100px;
+    height: 100px;
+    animation: spinner .5s linear infinite;
+}
+
+@keyframes spinner {
+    to{
+        transform: rotate(360deg);
+    }
+}
+
 @media (max-width: 1200px) {
     .container {
         padding: 0 80px;
@@ -25,5 +43,7 @@
         justify-content: center;
         padding: 0 10px;
     }
+    .loading{
+        left: 40%;
+    }
 }
-
