set loading for details section before api response

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,27 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans";
   background-color: rgb(247, 247, 247);
 }
+
+.loading {
+  border: 3px solid silver;
+  border-top-color: rgb(67, 164, 255);
+  border-radius: 50%;
+  position: absolute;
+  top: 45%;
+  left: 45%;
+  width: 100px;
+  height: 100px;
+  animation: spinner 0.5s linear infinite;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 555px) {
+  .loading {
+    left: 40%;
+  }
+}
