--- a/src/components/shared/Cart.module.css
+++ b/src/components/shared/Cart.module.css
@@ -57,7 +57,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 0.2s ease;
+    transition: all 0.3s ease;
+}
+
+
+.btns button:hover {
+    background-color: #124f9e;
 }
 
 .btns button img {
