--- a/src/components/ProductDetails.module.css
+++ b/src/components/ProductDetails.module.css
@@ -66,7 +66,8 @@
     line-height: 35px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px,
         rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 9px 16px;
-}
+        transition: all .3s ease;
+    }
 
 .buttonContainer a:hover {
     background-color: #0b499b;
